opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp_diff"
bug-reports: "https://github.com/janestreet/sexp_diff/issues"
dev-repo: "git+https://github.com/janestreet/sexp_diff.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp_diff/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Code for computing the diff of two sexps"
description: "
The code behind the [diff] subcommand of the Jane Street's [sexp]
command line tool.
"
